--- a/base_page.html
+++ b/base_page.html
@@ -11,5 +11,5 @@
   <body>
     <div id="root"></div>
   </body>
-  <script type="module" src="index.js"></script>
+  <script type="module" src="ini_data_base.js"></script>
 </html>
