--- a/base_page.html
+++ b/base_page.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="styles\css_base.css" />
-    <title>Swap_Chess</title>
+    <title>Rolling Dice</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <h1>running</h1>
+    </div>
   </body>
   <script type="module" src="ini_data_base.js"></script>
 </html>
